[package]
name = "map-segmentation-gendata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
geo = "0.27.0"
image = "0.24.7"
imageproc = "0.23.0"
indicatif = "0.17.7"
log = "0.4.20"
osmpbfreader = "0.16.0"
postcard = { version = "1.0.8", features = ["use-std"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"
slippy-map-tiles = "0.16.0"

[workspace]
members = [
    ".",
    "stitch_pictures",
]